# kicktipp-ev-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
analysis/: behavioral_edge.py  player_behaviour.py
analysis/figures/: __init__.py  ev_matrix.py
analysis/montecarlo/: README.md  _fanchart_template.html  engine.py  generate.py  stats.py  strategies.py
analysis/standings/: README.md  generate.py
analysis/tests/: test_behavioral_edge.py
app/: README.md  __init__.py  _compute.py  streamlit_app.py
config/: config.yaml
data/: README.md
data/history/: behavioral_edge_log.csv  snapshots.csv
data/opponents/: oracle.csv  picks.csv
docs/: KNOCKOUT_APSO_ENGINE.md  SYSTEM_MAP.md
notebooks/: 01_how_a_pick_is_made.ipynb  02_behavioral_edge.ipynb
src/: bonus_relev.py  calibration.py  decorrelate.py  field_model.py  opponents.py  oracle.py  pipeline.py  rank_sim.py  recommend.py  snapshot.py  update.py
src/backtest/: compare.py  evaluate.py  run_p0.py
src/bonus/: bracket_sim.py  group_sim.py  optimizer.py  outright_odds.py
tests/: conftest.py  test_app_smoke.py  test_blend.py  test_bonus.py  test_bonus_relev.py  test_calibration.py  test_field_mixture.py  test_field_model.py  test_kicktipp.py  test_kicktipp_model.py  test_knockout_scoring.py  test_live_wiring.py  test_odds.py  test_oracle.py  test_pipeline.py  test_rank_field.py  test_rank_sim.py  test_recommend.py  test_scoring.py  test_scrape_guard.py  test_snapshot.py  test_update.py  test_update_relev.py
(+19 files in other folders)
