[project]
name = "kicktipp-ev-engine"
version = "0.1.0"
description = "Quantitative score predictions for Kicktipp World Cup 2026 pool"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "matplotlib>=3.8,<4",
    "requests>=2.31,<3",
    "pyyaml>=6.0,<7",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
]
# Interactive Streamlit demo (see app/). Kept separate so the core engine stays lean.
app = [
    "streamlit>=1.30,<2",
    "plotly>=5.18,<6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
